[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydllinjector"
version = "1.0.0"
description = "A Python DLL injector that utilizes ctypes and the Win32 API."
authors = [
    {name = "Indifferenzah", email = "indifferenzah@pm.me"},
]

readme = "README.md"
keywords = ["python", "win32", "dll"]
license = {file = "LICENSE"}

requires-python = ">=3.8"

[project.scripts]
pydllinjector = "pydllinjector.main:main"

[project.urls]
Home = "https://github.com/Indifferenzah/pydllinjector"